hphp/hack/test/typecheck/expression_trees/splice_order.php.like_types.exp
File "splice_order.php", line 12, characters 8-14:
Typing error (Typing[4110])
  File "splice_order.php", line 12, characters 8-14:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_order.php", line 6, characters 3-59:
  But got `dynamic` because it is an unenforceable type
File "splice_order.php", line 12, characters 16-22:
Typing error (Typing[4110])
  File "splice_order.php", line 12, characters 16-22:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_order.php", line 7, characters 3-58:
  But got `dynamic` because it is an unenforceable type
File "splice_order.php", line 12, characters 24-30:
Typing error (Typing[4110])
  File "splice_order.php", line 12, characters 24-30:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_order.php", line 8, characters 3-49:
  But got `dynamic` because it is an unenforceable type
File "splice_order.php", line 12, characters 35-41:
Typing error (Typing[4110])
  File "splice_order.php", line 12, characters 35-41:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_order.php", line 9, characters 3-48:
  But got `dynamic` because it is an unenforceable type
File "splice_order.php", line 12, characters 47-54:
Typing error (Typing[4110])
  File "splice_order.php", line 12, characters 47-54:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "splice_order.php", line 10, characters 3-50:
  But got `dynamic` because it is an unenforceable type
